[package]
name = "model-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
km-checker = { path = "../framework/km-checker", features = ["derive", "qemu"] }
km-command = { path = "../framework/km-command", features = ["checker", "postcard"] }
multi-key-map = { path = "../multi-key-map" }
km-gen = { path = "../framework/km-gen" }
bitflags = "2.6.0"
heapless = "0.8.0"

[features]
fat = []
